# GNNSurvey

./: .gitignore  .gitmodules  README.md  icml2021.sty  main.tex
GNNSurvey Overleaf/: icml2021.sty  main.bib  main.tex
Implementation Codes/Bug Detection/DBN/: .gitignore  CMakeLists.txt  LICENSE  README.md  design.md
Implementation Codes/Bug Detection/DBN/include/: TokenVectorPass.hpp
Implementation Codes/Bug Detection/DBN/lib/: CMakeLists.txt  TokenVectorPass.cpp
Implementation Codes/Bug Detection/DBN/tests/: DBN.py  None_semantic_features.csv  _semantic_features.csv  analyze.sh  cross_ad_tree.py  jansson_semantic_features.csv  llvmasm.sh  mixlabels.csv  mutator.py  project_sources.txt  pugixml_semantic_features.csv  semantic_features_w_labels.csv  test.csv  testDBN.py  testlabels.csv  token_call.py  token_encoding_mutate.csv  token_vector_mutate.csv  trainlabels.csv  validlabels.csv  within_ad_tree.py  within_logistic_regression.py  within_naive_bayes.py
Implementation Codes/Bug Detection/DBN/tests/cc/: foo.cpp
Implementation Codes/Bug Detection/DBN/tests/csv/: token_encoding.csv  token_vector.csv
Implementation Codes/Bug Detection/DBN/tokenizerbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Implementation Codes/Bug Detection/DBN/tokenizerbuild/lib/: Makefile  cmake_install.cmake
Implementation Codes/Bug Detection/DBN/tools/: CMakeLists.txt
Implementation Codes/Bug Detection/DBN/tools/tokenprofiler/: CMakeLists.txt  main.cpp
Sripath GNN survey/: main.bib  main.tex
(+11 files in other folders)
